--- a/deel-2-flexbox-layout/opdracht-3/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-3/styles/styles.css
@@ -1,1 +1,55 @@
 /*Schrijf hier jouw CSS*/
+.body-container {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+    /*border: 2px solid red;*/
+}
+
+.col-1 {
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+    /*border: 2px solid red;*/
+}
+
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    border: 2px solid red;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+header {
+    flex-basis: 150px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+article {
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.flex-aside {
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+footer {
+    flex-basis: 150px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
