--- a/deel-2-flexbox-layout/opdracht-4/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-4/styles/styles.css
@@ -1,1 +1,63 @@
 /*Schrijf hier jouw CSS*/
+.body-container {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+    /*border: 2px solid red;*/
+}
+
+.outer-col-1 {
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+    /*border: 2px solid red;*/
+}
+
+.outer-col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    min-height: 100vh;
+    border: 2px solid red;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+header {
+    flex-basis: 150px;
+    min-height: 20vh;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.inner-row {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.inner-col {
+    flex-basis: 60vw;
+    min-height: 80vh;
+}
+
+.inner-col article {
+    min-height: 60vh;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.flex-aside {
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+footer {
+    flex-basis: 150px;
+    min-height: 20vh;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
