--- a/deel-2-flexbox-layout/opdracht-5/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-5/styles/styles.css
@@ -1,1 +1,50 @@
 /*Schrijf hier jouw CSS*/
+.body-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    /*border: 2px solid red;*/
+}
+
+header {
+    flex-basis: 150px;
+    min-height: 20vh;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.main-container article {
+    order: 2;
+    flex-basis: 80vw;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.main-container nav {
+    order: 1;
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.main-container aside {
+    order: 3;
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+footer {
+    flex-basis: 150px;
+    min-height: 20vh;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
